--- a/src/app/pages/product-orders/sections/order-info/order-info.component.html
+++ b/src/app/pages/product-orders/sections/order-info/order-info.component.html
@@ -51,7 +51,7 @@
                 </h6>
                 <ul class="space-y-2 text-sm" aria-labelledby="dropdownStateButton">
                     <li class="flex items-center">
-                        <input id="acknowledged" type="checkbox" value="" checked (change)="onStateFilterChange('acknowledged')"
+                        <input id="acknowledged" type="checkbox" value="" (change)="onStateFilterChange('acknowledged')"
                         class="w-4 h-4 bg-gray-100 checked:bg-primary-100 dark:checked:bg-primary-100 border-gray-300 rounded focus:ring-primary-100 dark:focus:ring-primary-100 dark:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500" />
 
                         <label for="acknowledged" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-100">
@@ -60,7 +60,7 @@
                     </li>
 
                     <li class="flex items-center">
-                        <input id="inProgress" type="checkbox" value="" checked (change)="onStateFilterChange('inProgress')"
+                        <input id="inProgress" type="checkbox" value="" (change)="onStateFilterChange('inProgress')"
                         class="w-4 h-4 bg-gray-100 checked:bg-primary-100 dark:checked:bg-primary-100 border-gray-300 rounded focus:ring-primary-100 dark:focus:ring-primary-100 dark:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500" />
 
                         <label for="inProgress" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-100">
@@ -69,7 +69,7 @@
                     </li>
 
                     <li class="flex items-center">
-                        <input id="partial" type="checkbox" value="" checked (change)="onStateFilterChange('partial')"
+                        <input id="partial" type="checkbox" value="" (change)="onStateFilterChange('partial')"
                         class="w-4 h-4 bg-gray-100 checked:bg-primary-100 dark:checked:bg-primary-100 border-gray-300 rounded focus:ring-primary-100 dark:focus:ring-primary-100 dark:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500" />
 
                         <label for="partial" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-100">
@@ -78,7 +78,7 @@
                     </li>
 
                     <li class="flex items-center">
-                        <input id="completed" type="checkbox" value="" checked (change)="onStateFilterChange('completed')"
+                        <input id="completed" type="checkbox" value="" (change)="onStateFilterChange('completed')"
                         class="w-4 h-4 bg-gray-100 checked:bg-primary-100 dark:checked:bg-primary-100 border-gray-300 rounded focus:ring-primary-100 dark:focus:ring-primary-100 dark:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500" />
 
                         <label for="completed" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-100">
@@ -96,7 +96,7 @@
                     </li>
 
                     <li class="flex items-center">
-                        <input id="pending" type="checkbox" value="" checked (change)="onStateFilterChange('pending')"
+                        <input id="pending" type="checkbox" value="" (change)="onStateFilterChange('pending')"
                         class="w-4 h-4 bg-gray-100 checked:bg-primary-100 dark:checked:bg-primary-100 border-gray-300 rounded focus:ring-primary-100 dark:focus:ring-primary-100 dark:ring-offset-gray-700 focus:ring-2 dark:bg-gray-600 dark:border-gray-500" />
 
                         <label for="pending" class="ml-2 text-sm font-medium text-gray-900 dark:text-gray-100">
